--- a/PhongWorkSpace/OrderPage.html
+++ b/PhongWorkSpace/OrderPage.html
@@ -54,7 +54,7 @@
     </div>
 </div>
 <div class="map">
-    <a href="../book.html">Trang Chủ</a> > xác nhận thanh toán
+    <a href="../book.html">Trang Chủ</a> > <a href="../cart.html"> Giỏ hàng </a> > Xác nhận thanh toán
 </div>
 <div class="body">
     <!--Code start here-->
@@ -96,13 +96,13 @@
                         Chuyện Con Mèo Dạy Hải Âu Bay
                     </td>
                     <td>
-                        41
+                        41.000₫
                     </td>
                     <td>
                         3
                     </td>
                     <td>
-                        123
+                        123.000₫
                     </td>
                 </tr>
                 <tr>
@@ -116,18 +116,18 @@
                         Nhà Giả Kim (Tái Bản 2015)
                     </td>
                     <td>
-                        44
+                        44.000₫
                     </td>
                     <td>
                         2
                     </td>
                     <td>
-                        88
+                        88.000₫
                     </td>
                 </tr>
                 <tr class="LastTableRow">
                    <td colspan="4" ></td>
-                   <td colspan="2" >Tổng tiền : 211</td>
+                   <td colspan="2" >Tổng tiền : 211.000₫</td>
                 </tr>
                 </tbody>
             </table>
@@ -149,13 +149,13 @@
                             Địa chỉ giao hàng
                         </td>
                         <td>
-                            <input type="text"/>
+                            <textarea></textarea>
                         </td>
                     </tr>
                     <tr>
                         <td>Phương thức thanh toán</td>
                         <td>
-                            <select>
+                            <select class="serviceSelect">
                                 <option>Nhận tiền khi nhận hàng</option>
                                 <option>Chuyển khoản ngân hàng</option>
                             </select>
@@ -170,7 +170,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2">
+                        <td colspan="2" class="centerTableRow">
                             <button class="pure-button pure-button-primary">
                                 Đặt hàng
                             </button>
